--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "sokol-odin"]
 	path = sokol-odin
-	url = https://github.com/floooh/sokol-odin.git
+	url = https://github.com/siddhantmadhur/sokol-odin.git
