--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,31 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+Pos=594,319
+Size=550,674
 Collapsed=0
+
+[Window][Hello, World]
+Size=500,500
+Collapsed=0
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=499,136
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
+
+[Window][Debug]
+Pos=167,168
+Size=174,116
+Collapsed=0
+
+[Window][Debug Stats]
+Pos=5,5
+Size=240,114
+Collapsed=0
+
+[Docking][Data]
 
